--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": " mocha --exit --timeout 30000"
   },
   "devDependencies": {
-    "circom_tester": "^0.0.9",
+    "circom_tester": "0.0.18",
     "mocha": "^9.2.0"
   },
   "dependencies": {
