Add npm scripts for standard targets
- Install circom on "local" `npm install` with `prepare`
- Make the "local" circom install silent, and check for existing
install, with CLI flags to control this behaviour
- Generate circuits before `npm test`
- Prepend "local" circom to PATH before `npm test`, as `circom_tester`
exec's `circom` directly
- `npm run build` to compile circuits
- `npm run check` to run the circom compiler pass without output

--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "version": "2.0.0",
   "description": "ZK-SNARK circuits for RAILGUN",
   "scripts": {
-    "test": "PATH=./bin:$PATH mocha --exit --timeout 30000"
+    "prepare": "./scripts/fetch_circom",
+    "prebuild": "./scripts/generate_circuits",
+    "build": "./scripts/compile_circuits",
+    "pretest": "./scripts/generate_circuits",
+    "test": "PATH=./bin:$PATH mocha --exit --timeout 30000",
+    "check": "./scripts/check_circuits"
   },
   "devDependencies": {
     "circom_tester": "0.0.18",
