Test artifact package builder

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "PATH=./bin:$PATH mocha --exit --timeout 600000",
     "check": "npm run prebuild; ./scripts/check_circuits",
     "clean": "./scripts/clean",
-    "ceremony": "npm run build; ./scripts/prepare_ceremony"
+    "ceremony": "npm run build; ./scripts/prepare_ceremony",
+    "export": "npm run build; ./scripts/generate_package"
   },
   "dependencies": {
     "circomlib": "2.0.5"
